--- a/views/index.slim
+++ b/views/index.slim
@@ -4,6 +4,14 @@ hr
   a href="post/#{post.id}"
     #post
       h3 style="float: left;" = post.title
-      h6 style="padding-top: 20px;" = post.date.strftime('%F')
+      h6 style="padding-top: 20px;" = post.created_at.strftime('%F')
       br
   hr
+-if session[:user]
+  form action="/search" method="post"
+    input type="text" name="search" placeholder="Search"
+    button type="submit" Search
+  form action="/create" method="post"
+    input type="text" name="title" placeholder="title"
+    textarea name="text" rows="6" cols="50" placeholder="kära dagbok..."
+    button type="submit" Spara
